# fluxe

./: Cargo.toml  README.md
fluxe-api/: Cargo.toml
fluxe-api/src/: api.rs  lib.rs
fluxe-circuits/: Cargo.toml
fluxe-circuits/benches/: circuit_constraints.rs  client_circuit_bench.rs  proof_generation.rs  proof_verification.rs
fluxe-circuits/benches/common/: mod.rs
fluxe-circuits/src/: burn.rs  circuits.rs  lib.rs  mint.rs  object_update.rs  setup.rs  transfer.rs  transfer_backup.rs
fluxe-circuits/src/gadgets/: auth.rs  callbacks.rs  comparison.rs  compliance.rs  memo.rs  merkle.rs  merkle_append.rs  mod.rs  note.rs  pedersen.rs  pedersen_ec.rs  pedersen_simple.rs  pool_policy.rs  poseidon.rs  range_proof.rs  receipts.rs  sanctions.rs  schnorr.rs  sorted_insert.rs  sorted_tree.rs  zk_object.rs
fluxe-circuits/tests/: arkworks_bug_reproduction.rs  circuits_test.rs  constraint_verification.rs  merkle_integration.rs  regression_test.rs
fluxe-core/: Cargo.toml
fluxe-core/src/: lib.rs  server_verifier.rs  state_manager.rs  types.rs  utils.rs
fluxe-core/src/crypto/: attestation.rs  blake2b.rs  domain_separators.rs  ec_auth.rs  lineage.rs  memo.rs  mod.rs  pedersen.rs  poseidon.rs  poseidon_encryption.rs  schnorr.rs
fluxe-core/src/data_structures/: callback.rs  compliance.rs  mod.rs  note.rs  receipts.rs  zk_object.rs
fluxe-core/src/merkle/: incremental_tree.rs  mod.rs  sorted_tree.rs  tree_error.rs  tree_params.rs
fluxe-core/src/types/: amount_wrapper.rs  field_wrapper.rs
fluxe-core/tests/: compliance_tests.rs  incremental_tree_tests.rs  zk_object_tests.rs
tests/: integration_test.rs  integration_tests.rs
