[workspace]
members = ["fluxe-core", "fluxe-circuits", "fluxe-api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fluxe Team"]

[workspace.dependencies]
ark-bls12-381 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", default-features = true, features = ["crh", "r1cs", "merkle_tree"] }
ark-ec = "0.5.0"
ark-ed-on-bls12-381 = { version = "0.5.0", features = ["r1cs"] }
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.0"
ark-std = "0.5.0"
blake2 = "0.10"
chacha20poly1305 = "0.10"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
axum = "0.7"