[package]
name = "fluxe-circuits"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
fluxe-core = { path = "../fluxe-core" }
ark-bls12-381 = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bls12-381 = { workspace = true }
ark-groth16 = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-snark = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
rayon = "1.7"
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-groth16/parallel"]

[[bench]]
name = "proof_generation"
harness = false

[[bench]]
name = "proof_verification"
harness = false

[[bench]]
name = "circuit_constraints"
harness = false